# GodCube2.rs

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  model.rs
src/algorithm/: bfs.rs  id_astar.rs  mod.rs
src/model/: astar.rs  mod.rs
src/web/: index.html  main.js  mod.rs
