[package]
name = "god_cube2"
version = "0.3.0"
edition = "2021"

[lib]
name = "god_cube2"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "GodCube2"
path = "src/bin/main.rs"

[profile.release]
lto = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4"
